<resources>
    <string name="app_name">Tutorial Screen</string>
    <string name="military_index">Military Index:</string>
    <string name="economic_index">Economic Index:</string>
    <string name="civil_unrest">Civil Unrest:</string>
    <string name="your_economic_index_is_affected_by_the_decisions_you_make">Your economic index is affected by the decisions you make</string>
    <string name="your_military_index_is_a_convenient_value_generated_by_the_size_of_your_military_and_the_funding_for_the_military">Your military index is a convenient value generated by the size of your military and the funding for the military</string>
    <string name="your_civil_unrest_is_affected_by_our_citizen_s_happiness_keep_them_happy_or_they_will_revolt">Your civil unrest is affected by our citizen\'s happiness. Keep them happy or they will revolt!</string>
    <string name="nation_flag">Nation Flag</string>
    <string name="todo">TODO</string>
    <string name="nation_name">Nation Name</string>
    <string name="hamburger_menu_navigate_to_other_pages">Hamburger Menu, Navigate to other Pages</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>
